my first commit

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitio web Neuquén</title>
+    <title>Neuqúen</title>
 </head>
 <body>
 
-    <header>Neu</header>
-    <nav></nav>
-    <section></section>
-    <article></article>
-    <article></article>
-    <footer></footer>
+    <head>Neuqúen</head>
+    <nav>
 
+    </nav>
+    <section>
+        
+        <article></article>
+        <article></article>
+        <article></article>
 
+    </section>
     
 </body>
 </html>
