--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <a href="mailto:jorgevalentini76@gmail.com">jorgevalentini76@gmail.com</a></p>              
         </footer>
 
-    
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
